# ttLogViewer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  design.md  implementation.md
cmake/: version.hpp.in  version.rc.in
docs/: design.md  implementation.md  phase1.md  phase2.md  phase3.md  review_notes.md
include/: app_config.hpp  app_controller.hpp  clipboard.hpp  filter_chain.hpp  i_filter_chain.hpp  i_log_reader.hpp  log_reader.hpp  render.hpp  render_utils.hpp
scripts/: build-release.sh
src/: CMakeLists.txt  app_config.cpp  app_controller.cpp  clipboard.cpp  filter_chain.cpp  log_reader.cpp  main.cpp  render.cpp  render_utils.cpp
tests/: CMakeLists.txt
tests/e2e/: completion_test.cpp  comprehensive_test.cpp  esc_priority_test.cpp  file_open_test.cpp  filter_workflow_test.cpp  input_cursor_test.cpp  input_flow_test.cpp  misc_keys_test.cpp  navigation_test.cpp  realtime_test.cpp  search_test.cpp  selection_test.cpp  session_test.cpp
tests/helpers/: mock_filter_chain.hpp  mock_log_reader.hpp  render_test_base.hpp  temp_file.hpp  test_utils.hpp
tests/render/: completion_popup_test.cpp  control_char_render_test.cpp  dialog_overlay_test.cpp  encoding_render_test.cpp  filter_bar_test.cpp  input_cursor_render_test.cpp  input_line_test.cpp  log_pane_test.cpp  progress_overlay_test.cpp  search_highlight_render_test.cpp  selection_render_test.cpp  status_bar_test.cpp
tests/unit/: app_config_test.cpp  app_controller_test.cpp  filter_chain_test.cpp  log_reader_test.cpp  render_utils_test.cpp
